# opencl-experimentation

./: .gitignore  README.md  geninput.py  kernel.h  main.cpp  meson.build  platforms.cpp  vecadd.cl
